@@ -3,6 +3,8 @@ examples/ex1.pl
 examples/ex10.pl
 examples/ex11.pl
 examples/ex12.pl
+examples/ex13.pl
+examples/ex14.pl
 examples/ex2.pl
 examples/ex3.pl
 examples/ex4.pl
@@ -30,13 +32,14 @@ README
 SIGNATURE
 t/Mo-utils/01-use.t
 t/Mo-utils/02-version.t
-t/Mo-utils/03-check_array_object.t
-t/Mo-utils/04-check_bool.t
-t/Mo-utils/05-check_isa.t
-t/Mo-utils/06-check_length.t
-t/Mo-utils/07-check_number.t
-t/Mo-utils/08-check_number_of_items.t
-t/Mo-utils/09-check_required.t
+t/Mo-utils/03-check_array.t
+t/Mo-utils/04-check_array_object.t
+t/Mo-utils/05-check_bool.t
+t/Mo-utils/06-check_isa.t
+t/Mo-utils/07-check_length.t
+t/Mo-utils/08-check_number.t
+t/Mo-utils/09-check_number_of_items.t
+t/Mo-utils/10-check_required.t
 utils.pm
 xt/Mo-utils/01-pod_coverage.t
 xt/Mo-utils/02-pod.t
