@@ -3,17 +3,20 @@
 use strict;
 use warnings;
 
+use Error::Pure;
+use Mo::utils qw(check_array_object);
+
 $Error::Pure::TYPE = 'Error';
 
-use Mo::utils qw(check_isa);
-
 my $self = {
-        'key' => 'foo',
+        'key' => [
+                'foo',
+        ],
 };
-check_isa($self, 'key', 'Test::MockObject');
+check_array_object($self, 'key', 'Test::MockObject', 'Value');
 
 # Print out.
 print "ok\n";
 
 # Output like:
-# #Error [...utils.pm:?] Parameter 'key' must be a 'Test::MockObject' object.
+# #Error [..utils.pm:?] Value isn't 'Test::MockObject' object.
