@@ -7,13 +7,13 @@ use warnings;
 use Error::Pure qw(err);
 use Readonly;
 
-Readonly::Array our @EXPORT_OK => qw(check_array_object check_bool check_isa
-	check_length check_number check_number_of_items check_required);
+Readonly::Array our @EXPORT_OK => qw(check_array check_array_object check_bool
+	check_isa check_length check_number check_number_of_items check_required);
 
 our $VERSION = 0.06;
 
-sub check_array_object {
-	my ($self, $key, $class, $class_name) = @_;
+sub check_array {
+	my ($self, $key) = @_;
 
 	if (! exists $self->{$key}) {
 		return;
@@ -21,11 +21,19 @@ sub check_array_object {
 
 	if (ref $self->{$key} ne 'ARRAY') {
 		err "Parameter '".$key."' must be a array.";
-	} else {
-		foreach my $obj (@{$self->{$key}}) {
-			if (! $obj->isa($class)) {
-				err $class_name." isn't '".$class."' object.";
-			}
+	}
+
+	return;
+}
+
+sub check_array_object {
+	my ($self, $key, $class, $class_name) = @_;
+
+	check_array($self, $key);
+
+	foreach my $obj (@{$self->{$key}}) {
+		if (! $obj->isa($class)) {
+			err $class_name." isn't '".$class."' object.";
 		}
 	}
 
@@ -129,8 +137,9 @@ Mo::utils - Mo utilities.
 
 =head1 SYNOPSIS
 
- use Mo::utils qw(check_array_object check_bool check_isa check_length check_number check_number_of_items check_required);
+ use Mo::utils qw(check_array check_array_object check_bool check_isa check_length check_number check_number_of_items check_required);
 
+ check_array($self, $key);
  check_array_object($self, $key, $class, $class_name);
  check_bool($self, $key);
  check_isa($self, $key, $class);
@@ -144,6 +153,16 @@ Mo::utils - Mo utilities.
 Mo utilities for checking of data objects.
 
 =head1 SUBROUTINES
+
+=head2 C<check_array>
+
+ check_array($self, $key);
+
+Check parameter defined by C<$key> which is reference to array.
+
+Put error if check isn't ok.
+
+Returns undef.
 
 =head2 C<check_array_object>
 
@@ -221,6 +240,9 @@ Returns undef.
 
 =head1 ERRORS
 
+ check_array():
+         Parameter '%s' must be a array.
+
  check_array_object():
          Parameter '%s' must be a array.
          %s isn't '%s' object.
@@ -248,6 +270,45 @@ Returns undef.
  use strict;
  use warnings;
 
+ use Mo::utils qw(check_array);
+
+ my $self = {
+         'key' => ['foo'],
+ };
+ check_array($self, 'key');
+
+ # Print out.
+ print "ok\n";
+
+ # Output:
+ # ok
+
+=head1 EXAMPLE2
+
+ use strict;
+ use warnings;
+
+ use Error::Pure;
+ use Mo::utils qw(check_array);
+
+ $Error::Pure::TYPE = 'Error';
+
+ my $self = {
+         'key' => 'foo',
+ };
+ check_array($self, 'key');
+
+ # Print out.
+ print "ok\n";
+
+ # Output like:
+ # #Error [..utils.pm:?] Parameter 'key' must be a array.
+
+=head1 EXAMPLE3
+
+ use strict;
+ use warnings;
+
  use Mo::utils qw(check_array_object);
  use Test::MockObject;
 
@@ -264,7 +325,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE2
+=head1 EXAMPLE4
 
  use strict;
  use warnings;
@@ -287,7 +348,7 @@ Returns undef.
  # Output like:
  # #Error [..utils.pm:?] Value isn't 'Test::MockObject' object.
 
-=head1 EXAMPLE3
+=head1 EXAMPLE5
 
  use strict;
  use warnings;
@@ -306,7 +367,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE4
+=head1 EXAMPLE6
 
  use strict;
  use warnings;
@@ -326,7 +387,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Parameter 'key' must be a 'Test::MockObject' object.
 
-=head1 EXAMPLE5
+=head1 EXAMPLE7
 
  use strict;
  use warnings;
@@ -346,7 +407,7 @@ Returns undef.
  # Output like:
  # ok
 
-=head1 EXAMPLE6
+=head1 EXAMPLE8
 
  use strict;
  use warnings;
@@ -366,7 +427,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Parameter 'key' has length greater than '2'.
 
-=head1 EXAMPLE7
+=head1 EXAMPLE9
 
  use strict;
  use warnings;
@@ -384,7 +445,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE8
+=head1 EXAMPLE10
 
  use strict;
  use warnings;
@@ -404,7 +465,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Parameter 'key' must be a number.
 
-=head1 EXAMPLE9
+=head1 EXAMPLE11
 
  use strict;
  use warnings;
@@ -447,7 +508,7 @@ Returns undef.
  # Output like:
  # ok
 
-=head1 EXAMPLE10
+=head1 EXAMPLE12
 
  use strict;
  use warnings;
@@ -490,7 +551,7 @@ Returns undef.
  # Output like:
  # #Error [...utils.pm:?] Test for Item 'value1' has multiple values.
 
-=head1 EXAMPLE11
+=head1 EXAMPLE13
 
  use strict;
  use warnings;
@@ -508,7 +569,7 @@ Returns undef.
  # Output:
  # ok
 
-=head1 EXAMPLE12
+=head1 EXAMPLE14
 
  use strict;
  use warnings;
