@@ -1,4 +1,5 @@
 0.06
+ - Add check_array().
  - Add check_bool().
 
 0.05 2021-10-19T13:07:37+02:00
